--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
                 <td data-bind="text: date"></td>
                 <td>
                   <a data-bind="attr: { href: url }, text: title" target="_blank"></a>
-                  <div data-bind="text: abstract"></div>
+                  <div data-bind="html: abstract"></div>
                 </td>
                 <td data-bind="text: tags"></td>
               </tr>
